     `vm-vs-spam-score-headers' used by vm-virtual.el.) 

   * The variable `vm-mime-alternative-select-method' renamed to
     `vm-mime-alternative-show-method' to make it clear that it only applies
     to the viewing of messages.  The new variable
     `vm-mime-alternative-yank-method' controls the selection of
     alternatives for citation in replies.

  IMPROVEMENTS

   * The trace of POP/IMAP sessions are retained in buffers named "trace of
     POP session..." or "trace of IMAP session...".  They are useful for
     troubleshooting any problems with mail server connections.

   * Setting `vm-stunnel-program' to nil asks VM to use the built-in SSL
     functionality of Emacs, available in Gnu Emacs 24.

   * New functions `vmpc-folder-match' and `vmpc-folder-account-match' in
     the vm-pcrisis package.

   * New variable `vm-mail-auto-save-directory' where message composition
     buffers are auto-saved.

VM 8.2.0a (2011-02-28)

  CHANGES

   * The configuration of headers-only messages, introduced in 8.1.90a, has
     changed.  The variable `vm-load-headers-only' has been replaced by a
     new variable `vm-enable-external-messages'.  It should be set to 'imap
     to allow external messages in IMAP folders and
     `vm-imap-max-message-size' be customized to control the size of
     messages that will be external.

   * If you download mail from IMAP spool files, the 8.1.x versions of
     VM had a bug which allowed the the `X-VM-IMAP-Retrieved' headers
     to grow unnecessarily.  This can slow down the saving of folders
     into which you downloaded IMAP mail.  To solve the problem, run
     the command `vm-prune-imap-retrieved-list' after installing
     version 8.2.0.  (See the info manual under "IMAP Spool Files".)

   * A set of inessential key bindings (a, b, e, i, w, L, M-l, !, <, >, *,
     %) have been removed from the standard VM key bindings.  If you would
     like to use them, add the line:
              (vm-legacy-key-bindings)